src/scss/components/_activity-list.scss
.activity-list {
	background-color: var(--color-intro-bg);
}

.activity-list__item-right {
	h3 {
		color: var(--color-link-text);

		[data-user-color-scheme='light'] & {
			color: var(--color-dark-alt);
		}
	}

	p {
		margin: 0;
	}
}

.activity-list__items {
	margin-top: get-size(500);
}

.activity-list__icon {
	align-items: center;
	border: 2px solid var(--color-text);
	border-radius: 50%;
	display: flex;
	height: 65px;
	justify-content: center;
	margin-right: get-size(500);
	min-width: 65px;
	padding: 12px;
	width: 65px;

	svg {
		height: auto;
		width: 40px;

		path {
			fill: var(--color-text);
		}
	}
}

.activity-list__item {
	display: flex;

	.post-list__item-links {
		margin-top: get-size(300);
	}
}

@media screen and (max-width: 767px) {
	.activity-list__wrapper {
		-webkit-overflow-scrolling: auto;
		overflow-x: auto;
		padding-bottom: var(--flow-space);
	}

	.activity-list__items {
		display: grid;
		gap: 0 get-size(700);
		grid-template-columns: repeat(auto-fill, minmax(250px, 0));
	}
}

@include media-query('md') {
	.activity-list__item-top {
		align-items: center;
	}

	.activity-list__items {
		display: grid;
		gap: get-size(500) get-size(700);
		grid-template-columns: repeat(2, 1fr);
		margin-top: get-size(700);

		li {
			font-size: 1rem;
		}
	}

	.activity-list__item {
		border-bottom: 1px dotted var(--color-link-text);
	}
}

